# miraie

./: .env  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: simple_bot.rs
src/: client.rs  error.rs  lib.rs  mirai.rs  miraie.rs  utils.rs
src/api/: common.rs  friend_list.rs  group_list.rs  member_list.rs  message_from_id.rs  mod.rs  recall.rs  resp_botInvitedJoinGroupRequestEvent.rs  send_friend_message.rs  send_group_message.rs
src/bot/: basic_types.rs  botapp.rs  connection.rs  data.rs  extensions.rs  keyword_command.rs  mod.rs  return_handle.rs  utils.rs
src/bot/api/: mod.rs
src/bot/streams/: mod.rs
src/messages/: chain.rs  chain_xml.rs  error.rs  event.rs  events.rs  friend.rs  group.rs  message.rs  mod.rs  stranger.rs  stream.rs  temp.rs  traits.rs  utils.rs
src/msg_framework/: app.rs  func.rs  mod.rs  requests.rs  test_msg_framework.rs
tests/: test_botapp.rs  test_msg_framework.rs
