[package]
name = "miraie"
version = "0.1.9"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "基于 mirai 和 mirai-api-http 的 QQ 机器人框架"
documentation = "https://docs.rs/miraie"
homepage = "https://github.com/gwy15/miraie"
repository = "https://github.com/gwy15/miraie"
keywords = ["bot", "qq", "mirai"]

[features]
default = ["native-tls"]
native-tls = [ "async-tungstenite/tokio-native-tls" ]
rustls = [ "async-tungstenite/tokio-rustls" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["sync", "rt"] }
futures = "0.3"
async-stream = "0.3.2"
async-tungstenite = { version = "0.13.1", default-features = false }
async-trait = "0.1.50"
pin-project = "1"

serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }

parking_lot = "0.11.1"
log = "0.4.14"
thiserror = "1.0.26"
anyhow = "1"

# parse string to message chain
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4.2"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
